Added a utility class Pair which represents a Pair of two generic objects. Also modified the statistics interface and implementation. The getters now returns a Pair of two lists representing the players leaderboard and the statistics