@@ -4,11 +4,13 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 
 import it.unibo.cluedo.model.player.api.Player;
 import it.unibo.cluedo.model.player.impl.PlayerImpl;
 import it.unibo.cluedo.model.statistics.api.Statistics;
 import it.unibo.cluedo.model.statistics.impl.StatisticsImpl;
+import it.unibo.cluedo.utilities.Pair;
 
 import java.util.List;
 import java.util.ArrayList;
@@ -28,7 +30,8 @@ final class StatisticsTest {
 
     private List<Player> players;
     private Statistics stats;
-    private Map<Player, Integer> leaderboard;
+    private List<Player> playersLeaderboard;
+    private List<Integer>  statsLeaderboard;
 
     /**
      * Set up the players and the statistics before each test.
@@ -40,7 +43,9 @@ final class StatisticsTest {
         players.add(new PlayerImpl("Player2", "Red"));
         players.add(new PlayerImpl("Player3", "Green"));
         stats = new StatisticsImpl(players);
-        leaderboard = new LinkedHashMap<>();
+        playersLeaderboard = new ArrayList<>();
+        statsLeaderboard = new ArrayList<>();
+        
     }
 
     /**
@@ -53,14 +58,18 @@ final class StatisticsTest {
         stats.incrementSteps(players.get(0), STEPS_FOR_PLAYER1_2);
         stats.incrementSteps(players.get(1), STEPS_FOR_PLAYER2);
         stats.incrementSteps(players.get(2), STEPS_FOR_PLAYER3);
-        assertEquals(stats.getStepsMade().get(players.get(0)), STEPS_FOR_PLAYER1);
-        assertEquals(stats.getStepsMade().get(players.get(1)), STEPS_FOR_PLAYER2);
-        assertEquals(stats.getStepsMade().get(players.get(2)), STEPS_FOR_PLAYER3);
+        assertEquals(stats.getStepsMade().getSecond().get(0), STEPS_FOR_PLAYER1);
+        assertEquals(stats.getStepsMade().getSecond().get(1), STEPS_FOR_PLAYER3);
+        assertEquals(stats.getStepsMade().getSecond().get(2), STEPS_FOR_PLAYER2);
         //Expected leaderboard: Player1, Player3, Player2
-        leaderboard.put(players.get(0), STEPS_FOR_PLAYER1);
-        leaderboard.put(players.get(2), STEPS_FOR_PLAYER3);
-        leaderboard.put(players.get(1), STEPS_FOR_PLAYER2);
-        assertEquals(leaderboard, stats.getStepsMade());
+        playersLeaderboard.add(players.get(0));
+        playersLeaderboard.add(players.get(2));
+        playersLeaderboard.add(players.get(1));
+        assertEquals(playersLeaderboard, stats.getStepsMade().getFirst());
+        statsLeaderboard.add(STEPS_FOR_PLAYER1);
+        statsLeaderboard.add(STEPS_FOR_PLAYER3);
+        statsLeaderboard.add(STEPS_FOR_PLAYER2);
+        assertEquals(statsLeaderboard, stats.getStepsMade().getSecond());
     }
 
     /**
@@ -69,16 +78,11 @@ final class StatisticsTest {
      */
     @Test
     void testRoomVisited() {
-        stats.incrementRoomsVisited(players.get(0));
-        stats.incrementRoomsVisited(players.get(0));
-        stats.incrementRoomsVisited(players.get(1));
-        assertEquals(stats.getRoomsVisited().get(players.get(0)), 2);
-        assertEquals(stats.getRoomsVisited().get(players.get(1)), 1);
-        assertEquals(stats.getRoomsVisited().get(players.get(2)), 0);
-        //Expected leaderboard: Player1, Player2, Player3
-        leaderboard.put(players.get(0), 2);
-        leaderboard.put(players.get(1), 1);
-        leaderboard.put(players.get(2), 0);
-        assertEquals(stats.getRoomsVisited(), leaderboard);
+        
+    }
+
+    @Test
+    void testAccusationsMade() {
+        
     }
 }
